--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -152,7 +152,7 @@
             <p>It`s, very intuitive and it informs you about all<br>the latest developments in the trading field.<br>Overall, the MT4 is the most popular and<br>widely used Forex trading platform</p>
             <a href="#">Learn More</a>
           </div>
-          <div class="scroll__box">
+          <div class="scroll__box  scroll__box--mb">
             <b>Mt4</b>
             <p>MT4 is a world-wide renowned application<br>which enables you to trade Forex,<br>Commodities and Futures. It is suitable for<br>beginner investors, but also for more experienced ones</p>
             <a href="#">Learn More</a>
