--- a/assets/templates/crypto-b/css/style.css
+++ b/assets/templates/crypto-b/css/style.css
@@ -222,6 +222,16 @@ form a {
 .page-header__login p {
   margin-bottom: 0; }
 
+.page-header__support {
+  width: 434px; }
+  .page-header__support input {
+    width: 90%; }
+  .page-header__support textarea {
+    margin-bottom: 50px;
+    border: 2px solid #fff;
+    border-radius: 10px;
+    background: transparent; }
+
 /* Smartphones (вертикальная и горизонтальная ориентация) ----------- */
 @media only screen and (min-width: 320px) and (max-width: 480px) {
   .page-header__form {
