--- a/assets/templates/crypto-b/templates/support.html
+++ b/assets/templates/crypto-b/templates/support.html
@@ -25,16 +25,19 @@
     </div>
     <div class="container">
       <div class="page-header__rules">
-        <h1 class="page-header__title">Support</h1>
-        <div class="page-header__form  page-header--pb">
-          <form action="" class="page-header__support">
-            <input type="text" placeholder="Full Name" required>
-            <input type="email" placeholder="E-mail" required>
-            <input type="text" placeholder="Subject" required>
-            <textarea name="comment" rows="8" cols="80"></textarea>
-            <input type="submit" value="Submit">
-          </form>
+        <div class="page-header__left-column">
+          <h1 class="page-header__title">Support</h1>
+          <div class="page-header__form  page-header--pb">
+            <form action="" class="page-header__support">
+              <input type="text" placeholder="Full Name" required>
+              <input type="email" placeholder="E-mail" required>
+              <input type="text" placeholder="Subject" required>
+              <textarea name="comment" rows="8" cols="80"></textarea>
+              <input type="submit" value="Submit">
+            </form>
+          </div>
         </div>
+        div.pa
       </div>
     </div>
   </header>
