--- a/assets/templates/crypto-b/sass/global/form.scss
+++ b/assets/templates/crypto-b/sass/global/form.scss
@@ -125,9 +125,13 @@ form a {
   
   & textarea {
     margin-bottom: 50px;
+    padding: 10px 20px;
+    color: #fff;
+    font-size: 20px;
     border: 2px solid #fff;
     border-radius: 10px;
     background: transparent;
+    resize: none;
   }
 }
 
