--- a/assets/templates/crypto-b/templates/support.html
+++ b/assets/templates/crypto-b/templates/support.html
@@ -24,8 +24,8 @@
       </nav>
     </div>
     <div class="container">
-      <div class="page-header__rules">
-        <div class="page-header__left-column">
+      <div class="page-header__rules  page-header__rules--support">
+        <div class="page-header__support-left">
           <h1 class="page-header__title">Support</h1>
           <div class="page-header__form  page-header--pb">
             <form action="" class="page-header__support">
@@ -37,7 +37,10 @@
             </form>
           </div>
         </div>
-        div.pa
+        <div class="page-header__support-right">
+          <h1>Contact Us</h1>
+          <p class="page-header--pb">GRANIT OAK WORLDWIDE LIMITED: Igoumenitsas 12, , 2027 Nicosia, Cyprus</p>
+        </div>
       </div>
     </div>
   </header>
