--- a/assets/templates/crypto-b/templates/support.html
+++ b/assets/templates/crypto-b/templates/support.html
@@ -39,7 +39,10 @@
         </div>
         <div class="page-header__support-right">
           <h1>Contact Us</h1>
-          <p class="page-header--pb">GRANIT OAK WORLDWIDE LIMITED: Igoumenitsas 12, , 2027 Nicosia, Cyprus</p>
+          <p><b>Support email:</b> support@+500crypto.com</p>
+          <p><b>Support phone:</b> +35722000974</p>
+          <p><b>Monday</b> to <b>Friday</b></p>
+          <p class="page-header--pb">between <b>10:00</b> to <b>18:00</b> GMT</p>
         </div>
       </div>
     </div>
