--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -152,7 +152,7 @@
             <li><a href="templates/faq.html">FAQ</a></li>
             <li><a href="templates/privacy.html">Legal & Privacy</a></li>
             <li><a href="templates/terms.html">Terms & Conditions</a></li>
-            <li><a href="#">Support</a></li>
+            <li><a href="templates/support.html">Support</a></li>
             <!-- <li><a href="templates/trading.html">Trading Guide</a></li> -->
           </ul>
         </div>
