--- a/assets/templates/crypto-b/templates/about.html
+++ b/assets/templates/crypto-b/templates/about.html
@@ -58,7 +58,7 @@
         <div class="page-footer__column">
           <b>About</b>
           <ul>
-            <li class="page-footer--active"><a href="about.html">About Us</a></li>
+            <li class="page-footer--active"><a>About Us</a></li>
             <li><a href="#">Careers</a></li>
             <li><a href="#">Press</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -71,7 +71,7 @@
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="privacy.html">Legal & Privacy</a></li>
             <li><a href="terms.html">Terms & Conditions</a></li>
-            <li><a href="#">Support</a></li>
+            <li><a href="support.html">Support</a></li>
             <!-- <li><a href="templates/trading.html">Trading Guide</a></li> -->
           </ul>
         </div>
