--- a/assets/templates/crypto-b/templates/contact.html
+++ b/assets/templates/crypto-b/templates/contact.html
@@ -70,7 +70,7 @@
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="privacy.html">Legal & Privacy</a></li>
             <li><a href="terms.html">Terms & Conditions</a></li>
-            <li><a href="#">Support</a></li>
+            <li><a href="support.html">Support</a></li>
             <!-- <li><a href="templates/trading.html">Trading Guide</a></li> -->
           </ul>
         </div>
