--- a/assets/templates/crypto-b/templates/privacy.html
+++ b/assets/templates/crypto-b/templates/privacy.html
@@ -94,7 +94,7 @@
             <li><a href="faq.html">FAQ</a></li>
             <li class="page-footer--active"><a>Legal & Privacy</a></li>
             <li><a href="terms.html">Terms & Conditions</a></li>
-            <li><a href="#">Support</a></li>
+            <li><a href="support.html">Support</a></li>
             <!-- <li><a href="templates/trading.html">Trading Guide</a></li> -->
           </ul>
         </div>
