--- a/assets/templates/crypto-b/templates/faq.html
+++ b/assets/templates/crypto-b/templates/faq.html
@@ -85,7 +85,7 @@
             <li class="page-footer--active"><a>FAQ</a></li>
             <li><a href="privacy.html">Legal & Privacy</a></li>
             <li><a href="terms.html">Terms & Conditions</a></li>
-            <li><a href="#">Support</a></li>
+            <li><a href="support.html">Support</a></li>
             <!-- <li><a href="templates/trading.html">Trading Guide</a></li> -->
           </ul>
         </div>
