--- a/assets/templates/crypto-b/templates/terms.html
+++ b/assets/templates/crypto-b/templates/terms.html
@@ -131,7 +131,7 @@
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="privacy.html">Legal & Privacy</a></li>
             <li class="page-footer--active"><a>Terms & Conditions</a></li>
-            <li><a href="#">Support</a></li>
+            <li><a href="support.html">Support</a></li>
             <!-- <li><a href="templates/trading.html">Trading Guide</a></li> -->
           </ul>
         </div>
