--- a/assets/templates/crypto-b/css/style.css
+++ b/assets/templates/crypto-b/css/style.css
@@ -338,7 +338,7 @@ form a {
 
 .page-header {
   min-height: 730px;
-  background: #070055 url("../img/header.png") top;
+  background: #00aeef url("../img/header.png") top;
   background-size: cover; }
 
 .page-header__logo {
