--- a/assets/templates/crypto-b/sass/blocks/page-header.scss
+++ b/assets/templates/crypto-b/sass/blocks/page-header.scss
@@ -1,6 +1,6 @@
 .page-header {
   min-height: 730px;
-  background: $b url("../img/header.png") top;
+  background: #00aeef url("../img/header.png") top;
   background-size: cover;
 }
 
