--- a/assets/templates/crypto-b/templates/registration.html
+++ b/assets/templates/crypto-b/templates/registration.html
@@ -291,7 +291,7 @@
             </select>
             <div class="page-header__checkbox">
               <input type="checkbox" id="check">
-              <label for="check">I confirm I am over 18 years old<br>and that I have read,<br>understood and accept<br><a href="terms.html" target="_blank">The Terms and Conditions apply</a></label>
+              <label for="check">I confirm I am over 18 years old and that I have read, understood and accept <a href="terms.html" target="_blank">The Terms and Conditions apply</a></label>
             </div>
             <input type="submit" value="Register Now">
             <p>Trading involves significant risk of loss</p>
