--- a/assets/templates/crypto-b/sass/global/form.scss
+++ b/assets/templates/crypto-b/sass/global/form.scss
@@ -18,17 +18,27 @@
 form {
   display: flex;
   flex-direction: column;
+  width: 350px;
   padding: 40px;
   border-radius: 10px;
   border: 5px solid $w;
-  // background: rgba(255, 255, 255, 0.8);
+  
+  & p {
+    margin-bottom: 0;
+    text-align: center;
+  }
+  
+  & a {
+    font-weight: bold;
+    text-decoration: none;
+  }
 }
 
 input {
-  width: 300px;
-  height: 40px;
-  margin-bottom: 15px;
-  padding: 0 20px;
+  // width: 300px;
+  // height: 40px;
+  margin-bottom: 20px;
+  padding: 10px 20px;
   color: $w;
   font-size: 18px;
   border-radius: 10px;
@@ -38,13 +48,11 @@ input {
 }
 
 input[type="checkbox"] {
-  width: 18px;
-  margin: 0;
   cursor: pointer;
 }
 
 select {
-  height: 42px;
+  height: 45px;
   padding: 0 20px;
   padding-left: 15px;
   margin-bottom: 20px;
@@ -76,6 +84,7 @@ input[type="submit"]:hover {
 }
 
 label {
+  width: 300px;
   font-size: 18px;
   cursor: pointer;
 }
@@ -84,16 +93,6 @@ input::placeholder {
   color: $w;
   font-size: 16px;
   text-transform: uppercase;
-}
-
-form p {
-  margin-bottom: 0;
-  text-align: center;
-}
-
-form a {
-  font-weight: bold;
-  text-decoration: none;
 }
 
 // Login
@@ -152,26 +151,34 @@ form a {
 /* Smartphones (вертикальная и горизонтальная ориентация) ----------- */
 @media only screen and (min-width : 320px) and (max-width : 480px) {    
   .page-header__form {
-    justify-content: center;
+    // justify-content: center;
     margin-top: 30px;
   }
   
+  form {
+    width: 80%;
+    padding: 30px;
+  }
+  
   input {
-    width: auto;
+    // width: auto;
     height: 40px;
     padding: 0 20px;
-    font-size: 18px;
   }
   
   select {
-    width: 99%;
-    height: 32px;
+    // width: auto;
+    height: 45px;
     padding: 0 15px;
   }
   
   label {
     padding-left: 10px;
-    font-size: 14px;
+    // font-size: 14px;
+  }
+  
+  input[type="checkbox"] {
+    width: 18px;
   }
   
   // Support
@@ -213,34 +220,12 @@ form a {
     margin-top: 30px;
   }
   
-  input {
-    width: 80%;
-    height: 40px;
-    margin-bottom: 15px;
-    padding: 0 20px;
-    font-size: 18px;
-  }
-  
-  input::placeholder {
-    font-size: 16px;
-  }
-  
-  input[type="checkbox"] {
-    width: 15px;
+  form {
+    width: 75%;
   }
   
   label {
     font-size: 16px;
-  }
-  
-  select {
-    height: 35px;
-    padding: 1px 20px;
-    font-size: 14px;
-  }
-  
-  form p {
-    text-align: center;
   }
   
   // Support
